--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# personal info
+
+/src/constants.config.js
